BASE64编码jar替换